<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
   >


    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="100dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/firmaAdi"
            android:id="@+id/firmaAdi" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/firmaxLokasyon"
            android:id="@+id/firmaxLokasyon" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/firmayLokasyon"
            android:id="@+id/firmayLokasyon" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/kampanyaIcerik"
            android:id="@+id/kampanyaIcerik" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/kampanyaSuresi"
            android:id="@+id/kampanyaSuresi" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="Kategori"
            android:id="@+id/kategori" />


    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Ekle"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/ButtonColor"
            android:text="Ekle"
            android:textAllCaps="true"
            android:textColor="#FFFF" />

        <Button
            android:id="@+id/vazgec"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/ButtonColor"
            android:text="Vazgeç"
            android:textColor="#FFFF" />
    </LinearLayout>




</LinearLayout>